@@ -45,6 +45,7 @@ Bugs fixed
 * #6961: latex: warning for babel shown twice
 * #6559: Wrong node-ids are generated in glossary directive
 * #6986: apidoc: misdetects module name for .so file inside module
+* #6999: napoleon: fails to parse tilde in :exc: role
 
 Testing
 --------
